fixed images being squashed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,9 +15,9 @@ textarea{
 
 .post-image{
 	width: 100%;
-	max-width: 300px;
+	max-width: 500px;
 	height: 100%;
-	max-height: 300px;
+	max-height: 500px;
 }
 
 .post-body{
